feat: Add comprehensive Kyverno policies for Kubernetes security
Added 45 Kyverno policies across 9 categories:

Pod Security (13 policies):
- PSS Baseline: privileged containers, host namespaces, capabilities, hostPath
- PSS Restricted: privilege escalation, run-as-nonroot, seccomp, sysctls, proc mount

Image Security (4 policies):
- Registry whitelist, block latest tag, image digest, pull policy

Resource Management (5 policies):
- Requests/limits, labels, probes, container limits, PDB

Network Security (6 policies):
- NodePort, LoadBalancer, host ports, TLS, NetworkPolicy, external IPs

RBAC Security (5 policies):
- Cluster-admin, wildcards, default SA, automount token, secrets access

Supply Chain Security (1 policy):
- Image signature verification (Sigstore/cosign)

Multi-Tenancy (3 policies):
- ResourceQuota/LimitRange generation, namespace restrictions, priority class

Best Practices (5 policies):
- Minimum replicas, pod anti-affinity, deployment strategy, ingress host

Mutation Policies (3 policies):
- Auto-inject security context, image pull secrets, tolerations

Also updated:
- check-violations.sh: Support both Gatekeeper and Kyverno with -e flag
- Added workload-clusters and management-cluster Kyverno policy references

--- a/region-usa/az1/management-cluster/global/policies/kustomization.yaml
+++ b/region-usa/az1/management-cluster/global/policies/kustomization.yaml
@@ -1,7 +1,15 @@
 # Management Cluster Policies
 # References shared policies from _common/policies/
+#
+# Note: Enable either Gatekeeper OR Kyverno policies, not both.
+# Both provide equivalent security controls - choose based on your preference.
+#
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # Gatekeeper policies (OPA-based)
   - flux-ks-gatekeeper.yaml
+  # Kyverno policies (Kubernetes-native)
+  # Uncomment to use Kyverno instead of or alongside Gatekeeper
+  # - flux-ks-kyverno.yaml
 
